--- a/src/app/ma-image-card-described/ma-image-card-described.component.html
+++ b/src/app/ma-image-card-described/ma-image-card-described.component.html
@@ -44,4 +44,7 @@
         </div>
     </div>
 </div>
+<div class="ma_flex--container described-card-button">
+    <button mat-raised-button>Buy Now</button>
+</div>
 </div>
