--- a/src/app/ma-image-card-full/ma-image-card-full.component.html
+++ b/src/app/ma-image-card-full/ma-image-card-full.component.html
@@ -35,8 +35,11 @@
                 <img src="../../assets/images/tfe-logo.png">
             </div>
             <div class="col-md-6 right-col">
-                <img src="../../assets/images/play-button.png" class="ma-pr-10">
-                <h1 class="ma__heading-1 ma-txt__white">Play the video</h1>
+                <h1 class="ma__heading-1">About Us</h1>
+                <div class="ma-txt__body2">we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire.</div>
+                    
+                <!-- <img src="../../assets/images/play-button.png" class="ma-pr-10">
+                <h1 class="ma__heading-1 ma-txt__white">Play the video</h1> -->
             </div>
         </div>
     </div>
