--- a/src/app/ma-menu/ma-menu.component.html
+++ b/src/app/ma-menu/ma-menu.component.html
@@ -1,5 +1,9 @@
-<ul class="ma-menu">
-    <li class="menu-item">
+<nav class="ma-top-header navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menunavbar" aria-controls="menunavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    <ul id="mamenu" class="ma-menu collapse navbar-collapse" id="menunavbar">
+    <li class="menu-item" >
         All Categories
         <ul class="item-body">
             <div class="row">
@@ -331,7 +335,7 @@
         Pages
     </li>
     <li class="menu-item">
-        Collection
+        Product List
     </li>
     <div class="ma_flex--container right-col">
         <div class="ma_flex__item ma_flex__item--vcenter justify-content-md-end right-col">
@@ -340,3 +344,4 @@
         </div>
     </div>
 </ul>
+</nav>
