--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -326,3 +326,12 @@ $blue-grey: $blue-grey-500 !default;
 
 $black: #000000; $rgb-black: "0,0,0" !default;
 $white: #ffffff; $rgb-white: "255,255,255" !default;
+
+
+//Color palette
+$ma-dark-palette: (
+    50: #ffffff,
+    500:#E91E63,
+    A600:#3a3a3a,
+    A700: #000000
+);
