--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "abstracts/mixins";
 @import "abstracts/flexbox";
 @import "abstracts/variables";
+@import "abstracts/variables-new";
 @import "abstracts/icon-font";
 
 @import "base/reset";
@@ -34,3 +35,6 @@
 @import "pages/product-page";
 @import "pages/sign-in-up-page";
 @import "pages/search-result-page";
+
+
+//Theming
