--- a/src/styles/base/_library.scss
+++ b/src/styles/base/_library.scss
@@ -39,6 +39,11 @@
 .mat-list-base{
     padding-top: 0px !important;
 }
+.mat-drawer{
+    max-height: 100vh;
+    position: fixed !important;
+    left: 0;
+}
 .mat-drawer-side{
     border-right: 0px !important;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
