--- a/src/styles/base/_misc.scss
+++ b/src/styles/base/_misc.scss
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 .ma_flex{
     &--container{
       @include flexbox();
@@ -136,5 +139,10 @@
   background-color: #144a52;
   img{
     width: 100px;
+  }
+}
+.collapse{
+  &.show{
+    display: block !important;
   }
 }
