--- a/src/styles/components/_top-header.scss
+++ b/src/styles/components/_top-header.scss
@@ -1,12 +1,27 @@
 .ma-top-header{
-    background-color: #F8F8F8;
+    background-color: $ma-bg-color__tertiary !important;
     width: 100%;
+    position: relative;
+    z-index: 999;
     @include respond-to("x-small") {
         padding: 10px;
+        background-color: #f8f8f8 !important;
     }
     @include respond-to("medium") {
         padding: 10px 25px;
+        position: absolute;
+        padding: 0;
+        top: 0;
+        background-color: unset !important;
     } 
+    >ul{
+        @include respond-to("x-small") {
+            margin-top: 60px;
+        }
+        @include respond-to("medium") {
+            margin-top: 0px;
+        } 
+    }
     .service-option-container{
         
         @include respond-to("x-small") {
