added popup and fixed changes

--- a/src/app/ma-carousel/ma-carousel.component.html
+++ b/src/app/ma-carousel/ma-carousel.component.html
@@ -65,13 +65,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="https://image.freepik.com/free-photo/happy-woman-with-shopping-bags_23-2148170001.jpg" alt="First slide">
+        <img class="d-block w-100" src="https://www.zastavki.com/pictures/originals/2017Holidays___Easter_Beautiful_Easter_cake_with_chocolate_icing_and_flowers_113125_.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://img.pngio.com/girls-shopping-png-hd-transparent-girls-shopping-hdpng-images-girl-shopping-png-image-1920_1080.jpg" alt="Second slide">
+        <img class="d-block w-100" src="https://images.wallpaperscraft.com/image/coffee_cups_coffee_machine_132777_2560x1080.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://wallpaperaccess.com/full/1496231.jpg" alt="Third slide">
+        <img class="d-block w-100" src="https://photos.scoopak.com/wp-content/uploads/2015/11/Deliciouspizza-image-1024x640.jpg" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
