--- a/src/app/ma-inner-header/ma-inner-header.component.html
+++ b/src/app/ma-inner-header/ma-inner-header.component.html
@@ -16,7 +16,7 @@
                             </mat-select>
                           </mat-form-field>
                     </div>
-                    <div class="ma_flex__item ma_flex__item--vcenter p70">
+                    <div class="ma_flex__item ma_flex__item--vcenter p70 search-col">
                         <mat-form-field class="example-full-width">
                             <mat-label>What are you looking for?</mat-label>
                             <input matInput placeholder="" value="">
