--- a/src/app/ma-menu/ma-menu.component.html
+++ b/src/app/ma-menu/ma-menu.component.html
@@ -1,8 +1,8 @@
-<nav class="ma-top-header navbar navbar-expand-lg navbar-light bg-light">
+<nav class="menu-nav-wrapper navbar navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menunavbar" aria-controls="menunavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-    <ul id="mamenu" class="ma-menu collapse navbar-collapse" id="menunavbar">
+    <ul class="ma-menu collapse navbar-collapse" id="menunavbar">
     <li class="menu-item" >
         All Categories
         <ul class="item-body">
