--- a/src/app/ma-routing-project/ma-routing-project.component.html
+++ b/src/app/ma-routing-project/ma-routing-project.component.html
@@ -24,6 +24,7 @@
             <mat-list-item role="listitem"><a routerLink="/vendor-services" mat-button color="primary">Vendor Services</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/floating-container" mat-button color="primary">Floating Container</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/section-tabs" mat-button color="primary">Section Tabs</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/all-popups" mat-button color="primary">All Popups</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/product-details" mat-button color="primary">Product Details</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/product-select" mat-button color="primary">Product Select</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/search-result-filter" mat-button color="primary">Search Result Filter</a></mat-list-item>
