--- a/src/app/ma-top-header/ma-top-header.component.html
+++ b/src/app/ma-top-header/ma-top-header.component.html
@@ -1,9 +1,9 @@
 <nav class="ma-top-header navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="display: none !important;">
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="display: none !important;">
         <div class="w-100">
             <div class="row align-items-center">
                 <div class="col-md-12">
