--- a/src/app/ma-vendor-page/ma-vendor-page.component.html
+++ b/src/app/ma-vendor-page/ma-vendor-page.component.html
@@ -1,4 +1,7 @@
 <div class="ma-vendor-page">
+    <div class="container-fluid">
+        <app-ma-top-header></app-ma-top-header>
+    </div>
     <div class="container inner-header-container">
         <app-ma-inner-header></app-ma-inner-header>
     </div>
