--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,6 +29,7 @@
 @import "components/product";
 @import "components/menu";
 @import "components/search";
+@import "components/popup";
 
 @import "pages/landing-page";
 @import "pages/vendor-page";
