added cart page and components

--- a/src/app/ma-routing-project/ma-routing-project.component.html
+++ b/src/app/ma-routing-project/ma-routing-project.component.html
@@ -18,6 +18,8 @@
             <mat-list-item role="listitem"><a routerLink="/image-card-verticle" mat-button color="primary">Image Card Verticle</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/search-item-card" mat-button color="primary">Search Item Card</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/download-component" mat-button color="primary">App Download</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/cart-item" mat-button color="primary">Cart Item</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/cart-block" mat-button color="primary">Cart Block</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/footer" mat-button color="primary">Footer</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/carousel" mat-button color="primary">Carousel</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/carousel-secondary" mat-button color="primary">Carousel Secondary</a></mat-list-item>
@@ -31,6 +33,7 @@
             <mat-list-item role="listitem"><a routerLink="/landing-page" mat-button color="primary">Landing Page</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/vendor-page" mat-button color="primary">Vendor Page</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/product-page" mat-button color="primary">Product Page</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/cart-page" mat-button color="primary">Cart Page</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/sign-in-page" mat-button color="primary">Sign In Page</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/sign-up-page" mat-button color="primary">Sign Up Page</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/search-result-page" mat-button color="primary">Search Result Page</a></mat-list-item>
