--- a/src/styles/base/_misc.scss
+++ b/src/styles/base/_misc.scss
@@ -25,6 +25,9 @@ html {
         display: flex;
         align-items: flex-end;
       }
+      &.p5{
+        width: 5%;
+      }
       &.p10{
         width: 10%;
       }
