--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,12 +30,14 @@
 @import "components/menu";
 @import "components/search";
 @import "components/popup";
+@import "components/cart";
 
 @import "pages/landing-page";
 @import "pages/vendor-page";
 @import "pages/product-page";
 @import "pages/sign-in-up-page";
 @import "pages/search-result-page";
+@import "pages/cart-page";
 
 
 //Theming
