--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -91,11 +91,12 @@
     }
 }
 .menu-nav-wrapper{
-    position: absolute;
+    //position: absolute;
     right: 0;
     top: 0px;
     left: 0;
     z-index: 9999;
+    padding: 0px;
     &.bg-dark{
         @include respond-to("x-small") {
             background-color: #000 !important;
