ico moon updated

--- a/src/app/ma-cart-block/ma-cart-block.component.html
+++ b/src/app/ma-cart-block/ma-cart-block.component.html
@@ -21,7 +21,7 @@
                     <button mat-flat-button class="ma-btn--large">
                         <div class="ma_flex--container">
                             <div class="ma_flex__item ma_flex__item--vcenter ma-pr-10">
-                                <i class="ma-ico-timer"></i>
+                                <i class="ma-ico-stopwatch"></i>
                             </div>
                             <div class="ma_flex__item">
                                 <div class="ma_flex--container flex-column align-items-start">
@@ -40,13 +40,13 @@
                     <div class="ma_flex--container action-button-right">
                         <div class="ma_flex__item--inherit">
                             <button mat-stroked-button class="icon-btn ma-txt__secondary">
-                                <i class="ma-ico-shopping-bag"></i>
+                                <i class="ma-ico-bag-1"></i>
                                 <div class="ma-txt__body2">Order More</div>
                             </button>
                         </div>
                         <div class="ma_flex__item--inherit">
                             <button mat-stroked-button class="icon-btn ma-txt__primary">
-                                <i class="material-icons">chat</i>
+                                <i class="ma-ico-comment"></i>
                                 <div class="ma-txt__body2">Chat</div>
                             </button>
                         </div>
@@ -89,7 +89,7 @@
                 </div> 
                 <div class="ma_flex--container notes-body">
                     <div class="ma_flex__item note-icon">
-                        <i class="material-icons">post_add</i>
+                        <i class="ma-ico-edit-tools"></i>
                     </div>
                     <div class="ma_flex__item d-flex note-text">
                         <div class="ma-txt__body1 ma-txt__secondary">
@@ -109,7 +109,7 @@
             <div class="price-summary-wrapper">
                 <div class="ma_flex--container summary-header flex-column">
                     <div class="ma_flex__item ma_flex__item--vcenter">
-                        <i class="material-icons ma-pr-10">check_circle</i>
+                        <i class="ma-ico-discount ma-pr-10"></i>
                         <h2 class="ma__heading-2">Price Summary</h2>
                     </div>
                 </div>
