--- a/src/app/ma-routing-project/ma-routing-project.component.html
+++ b/src/app/ma-routing-project/ma-routing-project.component.html
@@ -48,11 +48,11 @@
               </button>
               <div class="grid-inner">
                 <div class="title">
-                  <h1 class="ma__heading-1">Multi App Web</h1>
+                  <h1 class="ma__heading-1">Setup v4</h1>
                 </div>
                 <h2 class="ma__heading-2">Component Library / Design Guideline</h2>
                 <p class="">
-                  Welcome to the Component Library/Design Guideline for Multi App Web
+                  Welcome to the Component Library/Design Guideline for Setup v4
                 </p>
               </div>
               <button mat-mini-fab type="button" [matMenuTriggerFor]="theme">
