--- a/src/styles/base/_misc.scss
+++ b/src/styles/base/_misc.scss
@@ -139,7 +139,7 @@ html {
   height: 100px !important;
   justify-content: center;
   display: flex !important;
-  background-color: #144a52;
+  background-color: #393d40;
   img{
     width: 100px;
   }
